# voice-input

./: .gitignore  ADVANCED.md  Cargo.toml  GITHUB_TODO.md  LICENSE  README.md  build.rs  build_deb.sh  build_deb_cpu.sh  cuda_support.md  reproduce_release_failure.sh  task_1.md  task_UI_select_model.md  task_select_model.md  task_state_machine.md  threads.md  tray_menu.md  voice-input.desktop  voice_input_asset_generator.sh  whisper.md
.github/workflows/: ci.yml  release.yml
.junie/: guidelines.md
assets/desktop/: voice-input.desktop
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  rules  voice-input.substvars
debian/.debhelper/voice-input/: dbgsym-build-ids
debian/.debhelper/voice-input/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/voice-input/dbgsym-root/usr/share/doc/: voice-input-dbgsym
scripts/: voice_input_asset_generator.sh
src/: app.rs  audio_stream.rs  clipboard_inserter.rs  config.rs  hotkeys.rs  keyboard_layout.rs  keyboard_simulator.rs  main.rs  single_instance.rs  transcriber_utils.rs  tray_icon.rs  tray_ui.rs  whisper.rs
tasks/: before_promotion.md  code_review_gpt5.md  states.md  task_state_machine.md  ux-mockup-transcription-language.md
tasks/release_notes/: git_changes_v0.1.7_since_v0.1.6.md
