[package]
name = "voice_input"
version = "0.1.0"
edition = "2021"

[features]
tray-icon = ["gtk", "libappindicator"]

[dependencies]
device_query = "1.1.3"
chrono = "0.4.31"
cpal = "0.15.2"
hound = "3.5.1"
gtk = { version = "0.18.2", optional = true }
libappindicator = { version = "0.9.0", optional = true }
whisper-rs = "0.8.0"
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.17.7"
