[package]
name = "voice_input"
version = "0.1.4"
edition = "2021"

[features]
tray-icon = ["gtk", "libappindicator", "glib"]
cuda = ["whisper-rs/cuda"]

[dependencies]
device_query = "1.1.3"
chrono = "0.4.31"
rdev = "0.5.1"
enigo = "0.5.0"
cpal = "0.16.0"
hound = "3.5.1"
gtk = { version = "0.18.2", optional = true }
libappindicator = { version = "0.9.0", optional = true }
glib = { version = "0.18.2", optional = true }
whisper-rs = { version = "0.14.3" }
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.17.7"
sys-locale = "0.3.0"
lazy_static = "1.4.0"
tokio = "1.46.1"
atspi = "0.27.0"
arboard = "3.3.0"
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4.3"
